tests/type-errors/no_letin_instr_in_execution.arl
archetype no_letin_instr_in_execution

entry exec () {
  effect {
    let x = 0 in
      x := 1;
      x := 2
  }
}
